--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.3.1",
+    "allure-playwright": "^3.4.1",
     "dotenv": "^17.2.2"
   }
 }
