--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,17 +20,6 @@ jobs:
         with:
           node-version: 18
 
-      - name: Cache node modules and Playwright browsers
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            node_modules
-            ~/.cache/ms-playwright
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json', '**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Install dependencies
         run: npm ci
 
@@ -38,7 +27,6 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run Playwright tests
-        # Run tests; Playwright config must include allure-playwright reporter
         run: npx playwright test
 
       - name: Install allure-commandline
@@ -47,8 +35,8 @@ jobs:
       - name: Generate Allure report
         run: npx allure generate allure-results --clean -o allure-report
 
-      - name: Upload Allure report
-        uses: actions/upload-artifact@v4
+      - name: Deploy Allure report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          name: allure-report
-          path: allure-report
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
